# payment-transaction-model

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2022_11_12_1428-f031b8753027_initial_migration.py
transaction/: core.py  models.py
transaction/api/: main.py  providers.py  schemas.py
transaction/handler/: main.py
