[tool.poetry]
name = "banking-transaction-test"
version = "0.1.0"
description = ""
authors = ["Stanislav <wallseat@gmail.com>"]
readme = "README.md"
packages = [{include = "transaction"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.86.0"
asyncpg = "^0.27.0"
SQLAlchemy = "^1.4.43"
alembic = "^1.8.1"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
uvicorn = "^0.19.0"
aio-pika = "^8.2.4"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pre-commit = "^2.20.0"
sqlalchemy2-stubs = "^0.0.2a29"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
